--- a/app/src/main/res/layout/activity_take_note.xml
+++ b/app/src/main/res/layout/activity_take_note.xml
@@ -85,11 +85,19 @@
                 android:paddingTop="10dp" />
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/password"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:hint="@string/password"
+                android:inputType="textPassword"
+                android:paddingTop="10dp" />
+
+            <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/phone"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:hint="@string/phone"
-                android:inputType="text"
+                android:inputType="textPassword"
                 android:paddingTop="10dp" />
 
             <com.google.android.material.textfield.TextInputEditText
@@ -97,7 +105,7 @@
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:hint="@string/polis"
-                android:inputType="text"
+                android:inputType="textPassword"
                 android:paddingTop="10dp" />
 
             <com.google.android.material.textfield.TextInputEditText
@@ -105,7 +113,7 @@
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:hint="@string/polis_number"
-                android:inputType="text"
+                android:inputType="textPassword"
                 android:paddingTop="10dp" />
 
             <TextView
@@ -128,6 +136,14 @@
                 android:textStyle = "bold"
                 android:textSize = "18dp"
                 />
+
+            <CalendarView
+                android:id="@+id/calendarView"
+                android:layout_width="match_parent"
+                android:layout_height="302dp"
+                android:selectedWeekBackgroundColor="#ff0000"
+                android:weekNumberColor="#0000ff"
+                android:weekSeparatorLineColor="#00ff00" />
 
 
             <com.google.android.material.button.MaterialButton
