--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -7,6 +7,12 @@
     tools:context=".MenuActivity"
     android:orientation="vertical">
 
-
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/goToMap"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:paddingTop="10dp"
+        android:text="Перейти в карту" />
 
 </LinearLayout>
