--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,11 +16,11 @@
         android:orientation="vertical">
 
         <com.google.android.material.button.MaterialButton
-            android:layout_width="wrap_content"
+            android:id="@+id/sign_in"
+            android:layout_width="141dp"
             android:layout_height="wrap_content"
-            android:text="@string/sign_in"
             android:layout_gravity="center"
-            android:id="@+id/sign_in"/>
+            android:text="@string/sign_in" />
 
         <com.google.android.material.button.MaterialButton
             android:layout_width="wrap_content"
