--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -13,7 +13,7 @@
 
     <fragment
         android:id="@+id/navigation_dashboard"
-        android:name="com.example.iccet2020.ui.TakeNote.DashboardFragment"
+        android:name="com.example.iccet2020.ui.TakeNote.TakeNoteFragment"
         android:label="Запись на прием"
         tools:layout="@layout/fragment_take_note" />
 
