--- a/app/src/main/res/layout/activity_take_note.xml
+++ b/app/src/main/res/layout/activity_take_note.xml
@@ -162,6 +162,18 @@
                 android:textStyle="bold"
                 app:layout_constraintVertical_bias="0.75" />
 
+
+            <ListView
+                android:id="@+id/listView"
+                android:layout_width="320dp"
+                android:layout_height="80dp"
+                android:layout_gravity="center"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/scrollView2"
+                app:layout_constraintVertical_bias="0.7"/>
+
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/openCalendar"
                 android:layout_width="wrap_content"
@@ -189,21 +201,13 @@
                 android:id="@+id/registration_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="55dp"
+                android:text="Записаться"
                 android:layout_gravity="center"
                 android:gravity="center"
                 app:layout_constraintTop_toTopOf="parent" />
         </LinearLayout>
     </ScrollView>
 
-    <ListView
-        android:id="@+id/listView"
-        android:layout_width="320dp"
-        android:layout_height="80dp"
-        android:layout_gravity="center"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
-        app:layout_constraintVertical_bias="0.7"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
