--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -217,6 +217,7 @@
         app:layout_constraintVertical_bias="0.757" />
 
     <Button
+        android:id="@+id/changeBtn"
         android:layout_width="225dp"
         android:layout_height="52dp"
         android:text="Редактировать"
